# memory-arena

./: .gitignore  README.md  pyproject.toml
data/recsys_redial/: movies_merged.csv
memory_arena/: experimental_config.py
memory_arena/benchmarks/: longmemeval.py  memory_agent_bench.py
memory_arena/evaluation/: judge.py  judgment_runner.py  mab_judgment_runner.py  mab_runner.py  mab_scoring.py  recsys_scorer.py  run_metadata.py  runner.py
memory_arena/llm/: ollama_client.py
memory_arena/memories/: base.py  no_memory.py
scripts/: build_entity2id.py  inspect_recwizard_redial.py  match_movies.py  run_d_ar_nomemoria.py  run_d_cr_nomemoria.py  run_d_lru_nomemoria.py  run_d_ttl_nomemoria.py  run_d_ttl_recsys.py  run_e_lru_judge.py  score_d_ar.py  score_d_cr.py  score_d_lru.py  score_d_ttl.py  score_d_ttl_recsys.py  score_e_lru.py
tests/: test_config_consistency.py  test_judge.py  test_judgment_runner.py  test_longmemeval.py  test_mab_runner.py  test_mab_scoring.py  test_memory_agent_bench.py  test_no_memory.py  test_ollama_client.py  test_runner.py
