[project]
name = "memory-arena"
version = "0.1.0"
description = "Comparative evaluation of 5 memory strategies for LLM agents over LongMemEval and MemoryAgentBench"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "editdistance>=0.8.1",
    "ollama>=0.6.1",
    "rouge-score>=0.1.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memory_arena"]

[tool.pytest.ini_options]
markers = [
    "integration: tests que tocan servicios externos (HF Hub, Ollama)",
]
